# routes/index.js
@@ -11,6 +11,7 @@ router.use("/contacts", ensureAuthenticated, require("./contacts"))
 router.use("/transactions", ensureAuthenticated, require("./transactions"))
 router.use("/accounts", ensureAuthenticated, require("./accounts"))
 router.use("/users", ensureAuthenticated, require("./users"))
+router.use("/cards", ensureAuthenticated, require("./cards"))
 
 router.use((req, res) => {
     res.status(404).json({ message: "Route on found" })
